Replacing HTML File

--- a/Diabetes(1).html
+++ b/Diabetes(1).html
@@ -14594,6 +14594,8 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <p>In this jupyter notebook, we will be analyzing data of diabetic and non diabetic patients. Diabetes is a prevalent chronic condition affecting millions of individuals worldwide. Understanding the factors contributing to diabetes and developing accurate predictive models are crucial for effective management and intervention strategies. We will explore a dataset containing various attributes related to diabetes, such as glucose levels, pregnancies, bmi, and more.</p>
 <p>We will begin by importing and briefly overviewing the data. We will continue with exploratory data analysis. We will begin by conducting a thorough exploration of the dataset to gain insights into the distribution, relationships, and potential patterns among different variables. EDA is essential for understanding the structure of the data and identifying any anomalies or trends that may influence model performance.</p>
 <p>After exploring the data, we will be developing and comparing two approaches: deep learning and regression, and compare the results of both.</p>
+<p>Kaggle dataset: <a href="https://www.kaggle.com/datasets/ehababoelnaga/diabetes-dataset">https://www.kaggle.com/datasets/ehababoelnaga/diabetes-dataset</a> by Ehab Aboelnaga</p>
+<p>github link: <a href="https://github.com/chang388/Diabetes">https://github.com/chang388/Diabetes</a></p>
 
 </div>
 </div>
